# university-excercises-miscellaneous

./: .gitignore  my_bisection.m  my_function.m  plot_my_function_zero.m
MATLAB/: ceb_nodes.m  jacobi.m  matrici.m  my_bisection.m  my_ceb_nodes.m  my_function.m  my_gauss_LU.m  my_gauss_LU_piv.m  my_gauss_seidel.m  my_lagrange.m  my_lagrange_interpol.m  my_ltri_sol.m  my_lupiv_dec.m  my_min_quadrati.m  my_min_quadrati_generale.m  my_minq.m  my_norm.m  my_utri_sol.m  my_vandermonde.m  script_min_quadrati  script_min_quadrati.m  script_nodi_ceb.m
NetLogo/: 01-antsFood.nlogo  02-antsFoodStigmergy.nlogo  03-antsFoodSelection.nlogo  04-antsFoodEvolution.nlogo  es1.nlogo
SQL_Uni/_create_db/: esami.sql  mobili.sql  netflux.sql
SQL_Uni/c3es/: codice_film_dato_cliente.sql  film_maggiore_5.sql  telefono_nome_carlo.sql
SQL_Uni/c4es/: coppie_studenti_stessa_citta.sql  esami_voto_24_28.sql  studenti_nome_con_G.sql
SQL_Uni/c4es_SQLZoo/: sol.sql
SQL_Uni/c5es/: ordine_voto.sql  studenti_mo_ordinati.sql  voto_max_min_nome.sql
SQL_Uni/c6es/: nomi_studenti_esame_C1_v1.sql  nomi_studenti_esame_non_C1_v2.sql  nomi_studenti_esame_non_C1_v3.sql  studenti_tutti_esami_d1_v1.sql
SQL_Uni/c6es_SQLZoo/: sol.txt
SQL_Uni/c7es/: max_num_esami_per_docente_con_vista.sql
SQL_Uni/f1es/: prelievo_func.sql  trigger_riordino.sql
algoritmi-ottimizzazione/: Pipfile  requirements.txt
algoritmi-ottimizzazione/02_MILP/: 01_Gurobi_Introduction_to_modeling-simplified.ipynb  01b_KP01.py  my_diet.py  my_factory.py  my_prodmix.py  sol_diet.py  sol_factory.py
algoritmi-ottimizzazione/03_EsponentialConstraints/: ShowGraphs.py  data.csv  esame_primo_appello.py  my_tsp_subtours.py  stsp.lp  tsp++.lp  tsp.lp  tsp_Lazy.py  tsp_subtours.py
algoritmi-ottimizzazione/04_MachineLearning/: Clustering.ipynb  CustomerAssignment.ipynb
algoritmi-ottimizzazione/esame/: data.csv  knapsack.py
algoritmi-ottimizzazione/gurobi/: 01_TwoDimension.ipynb  sol_prodmix.py
algoritmi-ottimizzazione/processor-jobs/: solver.py
algoritmi-ottimizzazione/tsp/: myatsp.lp  stsp.lp  tsp_utils.py
appr-evo-sistemi-artificiali/NetLogo/: 01-antsFood.nlogo  04-antsFoodEvolution.nlogo
appr-evo-sistemi-artificiali/Simbrain/: riconoscimento_T.xml
autonomous-driving-systems/0_pcl_reader/: pcl_reader.cpp
autonomous-driving-systems/kalman-filter/: kalman-1D.ipynb  kalman-2D.ipynb
basi-dati/c4es/: citta_studenti.sql  esami_voto_24_studente_cc.sql  matricole_studenti_esame_con_ugo.sql  studenti_citta_null.sql  studenti_secondo_anno.sql
basi-dati/c5es/: conta_esami_22_28.sql  corso_numero_esami.sql  matr_studenti_stesso_voto.sql  media_esami_2_studenti.sql  num_studenti.sql  num_studenti_almeno_1_esame.sql  voto_max_min_studenti.sql  voto_medio_M2.sql
basi-dati/c5es_SQLZoo/: sol.txt
basi-dati/c6es/: citta_studenti_non_docenti_v1.sql  citta_studenti_non_docenti_v2.sql  nomi_studenti_esame_C1_v2.sql  nomi_studenti_esame_non_C1_v1.sql  studenti_anno_corso_minimo.sql  studenti_tutti_esami_d1_v2.sql
basi-dati/c7es/: crea_vista_doc_cor_esami.sql  max_num_esami_per_docente.sql  studenti_esami_con_M2.sql  studenti_esami_max_voto_non_33.sql  (+1 more)
calcolo-numerico/: my_diag_sol.m  my_gauss_LU.m  my_jacobi.m  my_minq_poli.m  plot_my_function_zero.m  script_interpol_lagrange.m  script_min_quadrati_generale.m
complementi-programmazione/: ese06-presentazione1.py
complementi-programmazione/presentazione05/ese05module/: main.py  pyproject.toml
complementi-programmazione/presentazione05/ese05module/Animali/: cane.py
complementi-programmazione/presentazione05/ese05module/animals.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gestione-informazione/: ese-presentazioneA2-slide56.py  ese-presentazioneA2-slide63.py  ese01-stopwords-removal-lemmatization.py
high-performance-computing/: connect.sh
metodologie-sviluppo-software/: Calculator.java  CalculatorTest.java  Converter.java  ConverterTest.java  ShoppingCartTest.java
platforms-algorithms-autonomous-vehicles/: sim_example.py
protocolli-architetture-rete/: ese-lab3a-slide13.txt
real-time-emdedded-systems/: api-pthread.md  data-structures.md  sincro-cheatsheet.md
real-time-emdedded-systems/lezione_freertos_POSIX/: CMakeLists.txt  Readme.md
real-time-emdedded-systems/lezione_freertos_POSIX/apps/01_tasks/: CMakeLists.txt  main.c
real-time-emdedded-systems/lezione_freertos_POSIX/apps/02_queues/: CMakeLists.txt  main.c
real-time-emdedded-systems/lezione_freertos_POSIX/apps/03_mutex/: CMakeLists.txt  main.c
real-time-emdedded-systems/lezione_freertos_POSIX/apps/04_semaphore_isr/: CMakeLists.txt  main.c  port_simulated_interrupt.c  port_simulated_interrupt.h
real-time-emdedded-systems/lezione_freertos_POSIX/apps/05_timers/: CMakeLists.txt  main.c
real-time-emdedded-systems/lezione_freertos_POSIX/apps/common/: CMakeLists.txt  utils.c  utils.h
sviluppo-software-sicuro/: nebula.md  pentester.md  protostar.md  riassunto.md
(+518 files in other folders)
